[gd_scene load_steps=26 format=2]

[ext_resource path="res://Player/Bodys/body_03.png" type="Texture" id=1]
[ext_resource path="res://Player/Guns/Small/turret_01_mk1.png" type="Texture" id=2]
[ext_resource path="res://Player/Guns/Big/turret_01_mk1.png" type="Texture" id=3]
[ext_resource path="res://Player/Scripts/Player.gd" type="Script" id=4]
[ext_resource path="res://Player/Scripts/Big_Gun.gd" type="Script" id=5]
[ext_resource path="res://Player/Scripts/Small_Gun.gd" type="Script" id=6]
[ext_resource path="res://Player/Bodys/Engine/exhaust_01a.png" type="Texture" id=7]
[ext_resource path="res://Player/Bodys/Engine/exhaust_01b.png" type="Texture" id=8]
[ext_resource path="res://Player/Guns/AnimFire/turret_01_explosion.png" type="Texture" id=9]
[ext_resource path="res://Player/Guns/AnimFire/turret_02_explosion.png" type="Texture" id=10]
[ext_resource path="res://Player/Guns/AnimFire/turret_03_explosion.png" type="Texture" id=11]
[ext_resource path="res://Player/Guns/AnimFire/turret_04_explosion.png" type="Texture" id=12]
[ext_resource path="res://Player/Guns/AnimFire/turret_05_explosion.png" type="Texture" id=13]
[ext_resource path="res://Player/Guns/Small/plasmaSound.wav" type="AudioStream" id=14]
[ext_resource path="res://Player/Guns/Big/laser9.wav" type="AudioStream" id=15]
[ext_resource path="res://Player/Guns/AnimFire/explosion_03.png" type="Texture" id=16]
[ext_resource path="res://Player/Guns/AnimFire/explosion_01.png" type="Texture" id=17]
[ext_resource path="res://Player/Guns/AnimFire/explosion_02.png" type="Texture" id=18]
[ext_resource path="res://Player/Guns/AnimFire/explosion_04.png" type="Texture" id=19]
[ext_resource path="res://Player/Guns/AnimFire/explosion_05.png" type="Texture" id=20]
[ext_resource path="res://Player/Guns/AnimFire/explosion_06.png" type="Texture" id=21]
[ext_resource path="res://Player/Guns/AnimFire/explosion_07.png" type="Texture" id=22]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ null, ExtResource( 17 ), ExtResource( 18 ), ExtResource( 16 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), null ],
"loop": false,
"name": "Blaster",
"speed": 20.0
}, {
"frames": [ null, ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), null ],
"loop": false,
"name": "default",
"speed": 20.0
} ]

[sub_resource type="CapsuleShape2D" id=4]
radius = 39.7188
height = 176.562

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 4 )

[node name="Body" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Engine_1" type="AnimatedSprite" parent="Body"]
position = Vector2( -32, 125 )
rotation = 0.696052
scale = Vector2( 1.30658, 1.30686 )
frames = SubResource( 1 )
frame = 1
playing = true

[node name="Engine_2" type="AnimatedSprite" parent="Body"]
position = Vector2( 32, 124 )
rotation = -0.810041
scale = Vector2( 1.30658, 1.30686 )
frames = SubResource( 1 )
frame = 1
playing = true

[node name="Small_Gun_1" type="Sprite" parent="."]
position = Vector2( 1, -69 )
texture = ExtResource( 2 )
script = ExtResource( 6 )

[node name="Point_Bullet" type="Position2D" parent="Small_Gun_1"]
position = Vector2( 18, -4 )

[node name="Fire" type="AnimatedSprite" parent="Small_Gun_1/Point_Bullet"]
scale = Vector2( 0.7875, 1 )
frames = SubResource( 3 )

[node name="Cooldown" type="Timer" parent="Small_Gun_1"]
one_shot = true

[node name="AudioShoot" type="AudioStreamPlayer" parent="Small_Gun_1"]
stream = ExtResource( 14 )
bus = "Gun"

[node name="Small_Gun_2" type="Sprite" parent="."]
position = Vector2( 1, -35 )
texture = ExtResource( 2 )
script = ExtResource( 6 )

[node name="Point_Bullet" type="Position2D" parent="Small_Gun_2"]
position = Vector2( 18, -4 )

[node name="Fire" type="AnimatedSprite" parent="Small_Gun_2/Point_Bullet"]
scale = Vector2( 0.7875, 1 )
frames = SubResource( 3 )

[node name="Cooldown" type="Timer" parent="Small_Gun_2"]
one_shot = true

[node name="AudioShoot" type="AudioStreamPlayer" parent="Small_Gun_2"]
stream = ExtResource( 14 )
bus = "Gun"

[node name="Big_Gun" type="Sprite" parent="."]
position = Vector2( 2, 13 )
texture = ExtResource( 3 )
script = ExtResource( 5 )

[node name="Point_Bullet" type="Position2D" parent="Big_Gun"]
position = Vector2( 34, 0 )

[node name="Fire" type="AnimatedSprite" parent="Big_Gun/Point_Bullet"]
position = Vector2( -3.8147e-06, 0 )
scale = Vector2( 0.7875, 1 )
frames = SubResource( 3 )
animation = "Blaster"

[node name="Cooldown" type="Timer" parent="Big_Gun"]
one_shot = true

[node name="AudioShoot" type="AudioStreamPlayer" parent="Big_Gun"]
stream = ExtResource( 15 )
bus = "Blaster"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.064, 0 )
scale = Vector2( 1.081, 1 )
shape = SubResource( 4 )

[node name="TimerBonus" type="Timer" parent="."]
one_shot = true
